--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,12 @@
     <string name="note_body_hint">Текст заметки</string>
     <string name="new_note_title">Новая заметка</string>
 
+    <string name="ok_btn_title">Ок</string>
+
     <string name="logout_menu_title">Выход</string>
+
+    <string name="logout_dialog_ok">@string/ok_btn_title</string>
+    <string name="logout_dialog_cancel">Отмена</string>
     <string name="logout_dialog_title">Выйти из аккаунта?</string>
     <string name="logout_dialog_message">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
-    <string name="logout_dialog_cancel">Отмена</string>
-    <string name="ok_btn_title">Ок</string>
 </resources>
